add title card and subtitle cards

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,12 @@
 <h2>Olympic games app</h2>
 <hr />
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="title-card">Médails par pays</div>
+        </div>
+        <div class="col-6 subtitle-card">Nombre de JO</div>
+        <div class="col-6 subtitle-card">Nombre de Pays</div>
+    </div>
+</div>
 <p>{{ (olympics$ | async)?.length }} data loaded</p>
