--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,11 @@
 <h2>Olympic games app</h2>
 <hr />
-<p>{{ (olympics$ | async)?.length }} data loaded</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="title-card">Médails par pays</div>
+        </div>
+        <div class="col-6 subtitle-card">Nombre de JO {{ joYears.length }}</div>
+        <div class="col-6 subtitle-card">Nombre de Pays {{ countriesList.length }}</div>
+    </div>
+</div>
