--- a/src/app/pages/medals-countries/medals-countries.component.html
+++ b/src/app/pages/medals-countries/medals-countries.component.html
@@ -1,9 +1,17 @@
 <div class="container">
-    <div class="row">
-        <div class="col-12">
-            <div class="title-card">Medals per Country</div>
-        </div>
-        <div class="col-6 subtitle-card">Number of JOs {{ joYears.length }}</div>
-        <div class="col-6 subtitle-card">Number of countries {{ countriesList.length }}</div>
+  <div class="row">
+    <div class="col-12">
+      <div class="title-card">Medals per Country</div>
     </div>
+    <div class="col-6 subtitle-card">Number of JOs {{ joYears.length }}</div>
+    <div class="col-6 subtitle-card">
+      Number of countries {{ countriesList.length }}
+    </div>
+    <div class="col-12">
+      <app-pie-chart
+        *ngIf="countriesList.length > 0"
+        [countriesListFromParent]="countriesList"
+      ></app-pie-chart>
+    </div>
+  </div>
 </div>
