add detail component (1.4), button return (2.1), Headers (2.2), add dynamic path and click event on chart

--- a/src/app/pages/medals-countries/pie-chart/detail/detail.component.html
+++ b/src/app/pages/medals-countries/pie-chart/detail/detail.component.html
@@ -1,1 +1,19 @@
-<p>detail works!</p>
+<h2>Country stat</h2>
+<hr />
+<button (click)="backButton()"> Back </button>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="title-card">{{ countryFromUrl }}</div>
+    </div>
+    <div class="col-4 subtitle-card">
+      Number of entries {{ numberOfEntries }}
+    </div>
+    <div class="col-4 subtitle-card">
+      Total number medals {{ totalNumberMedals }}
+    </div>
+    <div class="col-4 subtitle-card">
+      Total number of athletes {{ totalNumberOfAthletes }}
+    </div>
+  </div>
+</div>
