--- a/src/app/pages/medals-countries/pie-chart/pie-chart.component.html
+++ b/src/app/pages/medals-countries/pie-chart/pie-chart.component.html
@@ -9,6 +9,7 @@
         [options]="pieChartOptions"
         [plugins]="pieChartPlugins"
         style="width: 100%; height: 30vh"
+        (chartHover)="chartHovered($event)"
       >
       </canvas>
     </div>
