--- a/src/app/pages/medals-countries/pie-chart/detail/detail.component.html
+++ b/src/app/pages/medals-countries/pie-chart/detail/detail.component.html
@@ -1,6 +1,6 @@
 <h2>Country stat</h2>
 <hr />
-<button (click)="backButton()"> Back </button>
+<button (click)="backButton()">Back</button>
 <div class="container">
   <div class="row">
     <div class="col-12">
@@ -14,6 +14,14 @@
     </div>
     <div class="col-4 subtitle-card">
       Total number of athletes {{ totalNumberOfAthletes }}
+    </div>
+    <div class="col-12">
+      <canvas
+        baseChart
+        class="chart"
+        [data]="lineChartData"
+        [type]="lineChartType"
+      ></canvas>
     </div>
   </div>
 </div>
