Update chart color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ h4 {
 
 .title-card {
   margin: auto;
-  background: #2cb5a0;
+  background: #14838e;
   width: 13rem;
   padding: 1em;
   border-radius: 10px;
@@ -38,7 +38,7 @@ h4 {
   padding: 1em;
   border-style: solid;
   border-radius: 10px;
-  border-color: #2cb5a0;
+  border-color: #14838e;
   text-align: center;
   color: #000000;
 }
