Remove legend in detail component

--- a/src/app/pages/medals-countries/pie-chart/detail/detail.component.html
+++ b/src/app/pages/medals-countries/pie-chart/detail/detail.component.html
@@ -21,7 +21,8 @@
         class="chart"
         [data]="lineChartData"
         [type]="lineChartType"
-      ></canvas>
+        [legend]="false">
+      </canvas>
     </div>
   </div>
 </div>
